; ModuleID = '/home/carl/AnghaBench/tmux/extr_server-client.c_server_client_is_default_key_table.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_server-client.c_server_client_is_default_key_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client = type { i32 }
%struct.key_table = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.client*, %struct.key_table*)* @server_client_is_default_key_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @server_client_is_default_key_table(%struct.client* %0, %struct.key_table* %1) #0 {
  %3 = alloca %struct.client*, align 8
  %4 = alloca %struct.key_table*, align 8
  store %struct.client* %0, %struct.client** %3, align 8
  store %struct.key_table* %1, %struct.key_table** %4, align 8
  %5 = load %struct.key_table*, %struct.key_table** %4, align 8
  %6 = getelementptr inbounds %struct.key_table, %struct.key_table* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.client*, %struct.client** %3, align 8
  %9 = call i32 @server_client_get_key_table(%struct.client* %8)
  %10 = call i64 @strcmp(i32 %7, i32 %9)
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i64 @strcmp(i32, i32) #1

declare dso_local i32 @server_client_get_key_table(%struct.client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
